--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,3 +4,8 @@ services:
     build: ./django
     ports:
       - 8000:8000
+  postgres:
+    image: postgres:14
+    environment:
+      POSTGRES_PASSWORD: thisisnotsecure
+    restart: always
