Added daphne and docker-compose depends_on

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
     build: ./django
     ports:
       - 8000:8000
+    depends_on:
+      - postgres
   postgres:
     image: postgres:14
     environment:
