--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -7,5 +7,4 @@ RUN pip install -r requirements.txt
 RUN django-admin startproject dtc0001
 WORKDIR /app/dtc0001
 COPY settings.py /app/dtc0001/dtc0001/settings.py
-RUN python manage.py startapp polls
-CMD python manage.py runserver 0.0.0.0:8000
+CMD daphne -b 0.0.0.0 dtc0001.asgi:application
